...

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Welcome!"
                android:id="@+id/welcomeUser"
                android:layout_marginLeft="16dp"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
...
